# AIBE

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  Makefile  alembic.ini  bug.md  create_assets.py  create_manifests.py  docker-compose.yml  generate-layout.js  implementation_plan.md  implementation_progress.md  improve.md  mypy.ini  pyproject.toml  pytest.ini  rel.md  ruff.toml  setup.ps1  setup.sh  test_openrouter.py  test_output.txt  update_catalog.js  update_prompts.py  update_yaml.py  write_evo_agents.py  write_exec_agents.py  write_product_agents.py  write_research_agents.py
.github/workflows/: cd.yml  ci.yml
aibe/: __init__.py
aibe/agents/: __init__.py  factory.py  registry.py
aibe/agents/ai_ml/: __init__.py  cipher.py  neural.py  optimus.py  tensor.py
aibe/agents/base/: __init__.py  agent.py  context.py  lifecycle.py
aibe/agents/delegation/: __init__.py  builder.py  models.py  router.py
aibe/agents/evolution/: __init__.py  automata.py  darwin.py  synth.py
aibe/agents/executive/: __init__.py  minerva.py  oracle.py
aibe/agents/finance/: __init__.py  atlas.py  ledger.py  procurator.py
aibe/agents/marketing/: __init__.py  helix.py  lumen.py  prism.py  quill.py  volt.py
aibe/agents/meetings/: __init__.py  engine.py  types.py
aibe/agents/product/: __init__.py  cinder.py  deploy.py  ember.py  flint.py  forge.py  patch.py
aibe/agents/research/: __init__.py  pulse.py  scout.py  vega.py
aibe/agents/sales/: __init__.py  closer.py  escalator.py  guardian.py  mercury.py  orator.py
aibe/agents/security/: __init__.py  auditor.py  compliance.py  incident_responder.py  penetest.py  sentinel.py  vault_keeper.py
aibe/agents/social/: __init__.py  bloom.py  echo.py  grove.py  nova.py  spark.py
aibe/config/: __init__.py  agents.yaml  routing_table.yaml
aibe/core/: __init__.py  config.py  exceptions.py  logging.py  meeting_store.py  task_tracker.py  types.py
aibe/core/browser/: __init__.py  client.py  pool.py
aibe/core/cost_tracker/: __init__.py  tracker.py
aibe/core/db/: __init__.py  clickhouse.py  models.py  postgres.py  redis.py  session.py
aibe/core/memory/: __init__.py  client.py  models.py  namespaces.py
aibe/core/message_bus/: __init__.py  client.py  models.py  signing.py  streams.py
aibe/core/router/: __init__.py  (+4 more)
aibe/ui/: __init__.py
aibe/workers/: __init__.py  celery_app.py
tests/: conftest.py
tests/integration/: test_api.py
(+146 files in other folders)
