[project]
name = "aibe"
version = "2.0.0"
description = "AI Business Engine — Fully autonomous multi-agent business system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "nats-py>=2.9.0",
    "openai>=1.58.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "jinja2>=3.1.4",
    "celery[redis]>=5.4.0",
    "docker>=7.1.0",
    "hvac>=2.3.0",
    "websockets>=14.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "orjson>=3.10.12",
    "tenacity>=9.0.0",
    "aiofiles>=24.1.0",
    "clickhouse-connect>=0.8.8",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
security = [
    "semgrep>=1.96.0",
    "bandit>=1.8.0",
]
ml = [
    "torch>=2.5.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "wandb>=0.19.0",
    "modal>=0.68.0",
    "bentoml>=1.3.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "pre-commit>=4.0.0",
    "factory-boy>=3.3.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
    "testcontainers[postgres,redis,nats]>=4.8.0",
    "faker>=33.0.0",
    "types-pyyaml>=6.0.0",
    "types-aiofiles>=24.1.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aibe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.coverage.run]
source = ["aibe"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@abstractmethod",
    "raise NotImplementedError",
]
